# gcc-gtest-docker

./: .dockerignore  CMakeLists.txt  Dockerfile  build.sh  docker-compose.yml  hello_test[1]_include.cmake  hello_test[1]_tests.cmake  main.cpp  main.t.cpp  main_test[1]_include.cmake  main_test[1]_tests.cmake  setup.sh  test.sh  test[1]_include.cmake
adder/: adder.cpp  adder.h
bankaccount/: CMakeLists.txt  bankaccount.cpp  bankaccount.h
test/: coordinate.t.cpp  main.t.cpp
